policies/components/security-context/require-ro-rootfs/resources.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  namespace: mas-dev-core
spec:
  containers:
    - name: ghost
      image: ghost
      securityContext:
        readOnlyRootFilesystem: false
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
  namespace: mas-dev-core
spec:
  containers:
    - name: ghost
      image: ghost
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
  namespace: mas-dev-core
spec:
  containers:
    - name: ghost
      image: ghost
    - name: busybox
      image: busybox
      securityContext:
        readOnlyRootFilesystem: true
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  namespace: mas-dev-core
spec:
  containers:
    - name: ghost
      image: ghost
      securityContext:
        readOnlyRootFilesystem: true
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
  namespace: mas-dev-core
spec:
  containers:
    - name: ghost
      image: ghost
      securityContext:
        readOnlyRootFilesystem: true
    - name: nginx
      image: nginx
      securityContext:
        readOnlyRootFilesystem: true
